--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -11,6 +11,14 @@
   border-bottom: none;
 }
 
+.hpanel > .panel-footer.top {
+  color: inherit;
+  border: 1px solid @border-color;
+  border-bottom: none;
+  background: @color-bright;
+  line-height: 1.5;
+}
+
 .hpanel > .panel-footer {
   color: inherit;
   border: 1px solid @border-color;
@@ -210,4 +218,65 @@
 
 .wrapper {
   padding: 10px 20px;
+}
+
+ul.panel-list {
+  list-style: none;
+  padding: 0;
+}
+
+ul.panel-list li a {
+  padding: 10px 15px;
+  display: block;
+}
+
+ul.panel-list li a i {
+  margin-right: 6px;
+  display: inline-block;
+}
+
+ul.panel-list li.active a {
+  background: #f7f9fa;
+  border: 1px solid #e4e5e7;
+  font-weight: 600;
+  border-radius: 1px;
+}
+ul.panel-list li:hover a {
+  font-weight: 600;
+}
+
+.table-panel {
+  .radio, .checkbox {
+    margin: 0;
+  }
+  .radio label, .checkbox label {
+    cursor: default;
+  }
+
+  tr.unread td a {
+    font-weight: 600;
+  }
+
+  tr td span.label {
+    margin-left: 10px;
+  }
+
+  tr:first-child td {
+    border-top: none;
+  }
+
+  tr td:first-child {
+    width: 33px;
+    padding-right: 0;
+  }
+}
+
+.panel-pagination {
+  text-align: right;
+}
+
+@media (max-width: 768px) {
+  .panel-pagination {
+    text-align: left;
+  }
 }
