--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,8 +1,14 @@
 /* Custom */
 
-.location {
-
+.filternav i { width: 18px; }
+.filternav i.fa-spin {
+  width: 12px;
+  height: 14px;
+  margin-top: -6px;
+  color: #656b79;
+  opacity: .5;
 }
+.filternav a { color: #656b79; }
 
 .footwrap {
   //min-height: 100%;
