--- a/app/views/user/user.profile.html
+++ b/app/views/user/user.profile.html
@@ -23,34 +23,36 @@
                         </div>
 
                         <div class="row">
-                            <div class="col-sm-3" ng-if="$state.params.user.activity.leader">
+                            <div class="col-xs-3 col-sm-3 no-overflow"
+                                 ng-if="$state.params.user.profile.activity.leader">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Leader:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in $state.params.user.activity.leader" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
+                                    <li ng-repeat="item in $state.params.user.profile.activity.leader" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
                                         <a href="{{'/' + item.key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-sm-3" ng-if="$state.params.user.activity.founder">
+                            <div class="col-xs-3 col-sm-3 no-overflow"
+                                 ng-if="$state.params.user.profile.activity.founder">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Founder:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in $state.params.user.activity.founder" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
+                                    <li ng-repeat="item in $state.params.user.profile.activity.founder" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
                                         <a href="{{'/' + item.key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-sm-3" ng-if="$state.params.user.activity.investor">
+                            <div class="col-xs-3 col-sm-3 no-overflow" ng-if="$state.params.user.profile.activity.investor">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Investor:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in $state.params.user.activity.investor" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
+                                    <li ng-repeat="item in $state.params.user.profile.activity.investor" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
                                         <a href="{{'/' + item.key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="col-sm-3" ng-if="$state.params.user.activity.advisor">
+                            <div class="col-xs-3 col-sm-3 no-overflow" ng-if="$state.params.user.profile.activity.advisor">
                                 <p class="profile-label font-uppercase" style="font-size: 14px;">Advisor:</p>
                                 <ul style="padding-left: 0; margin-left: -5px; margin-top: -8px;">
-                                    <li ng-repeat="item in $state.params.user.activity.advisor" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
+                                    <li ng-repeat="item in $state.params.user.profile.activity.advisor" style="list-style: none; display: inline; float: left; padding-left: 5px; padding-top: 3px;">
                                         <a href="{{'/' + item.key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
                                     </li>
                                 </ul>
