working on people view

--- a/app/less/panels.less
+++ b/app/less/panels.less
@@ -160,7 +160,7 @@
 }
 
 .small-header .hpanel {
-  margin-bottom: 0;
+  //margin-bottom: 0;
 }
 
 .small-header {
@@ -223,10 +223,11 @@
 ul.panel-list {
   list-style: none;
   padding: 0;
+  margin-bottom: 0;
 }
 
 ul.panel-list li a {
-  padding: 10px 15px;
+  padding: 8px 15px;
   display: block;
 }
 
