--- a/app/less/various.less
+++ b/app/less/various.less
@@ -4,6 +4,10 @@
   overflow: hidden;
 }
 
+.panel-body.filternav {
+  padding: 15px;
+}
+
 .filternav i { width: 18px; }
 .filternav i.fa-spin {
   width: 12px;
