--- a/app/views/people/user.profile.html
+++ b/app/views/people/user.profile.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-sm-9">
                         <div class="col-sm-2 col-lg-1">
-                            <img class="img-circle m-b" style="height:75px;" ng-src="{{$state.params.user.profile.avatar || $state.params.user.profile.linkedin.pictureUrl || '/public/blank_avatar.png'}}" alt="{{::$state.params.user.profile.name}}">
+                            <img class="img-circle m-b" style="height:75px;" ng-src="{{$state.params.user.profile.avatar || $state.params.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{::$state.params.user.profile.name}}">
                         </div>
                         <div class="col-sm-10 col-lg-11">
                             <div class="project-action" style="margin-right: -15px;">
