--- a/app/views/people/people.html
+++ b/app/views/people/people.html
@@ -25,87 +25,90 @@
         </div>
     </div>
     <div animate-panel effect="zoomIn">
+        <div class="col-lg-12">
+            <div class="col-md-4 animated-panel zoomIn">
+            <!-- Navigation Block -->
+                <div class="hpanel">
+                    <div class="panel-footer top" style="font-size: 17px;">
+                        <strong>Role</strong> Filters
+                        <i ng-show="loadingRole" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    </div>
+                    <div class="panel-body filternav">
 
-        <div class="col-md-3 col-lg-2 animated-panel zoomIn" style="padding-left: 25px;">
-        <!-- Navigation Block -->
-            <div class="hpanel">
-                <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Role</strong> Filters
-                    <i ng-show="loadingRole" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
-                </div>
-                <div class="panel-body filternav">
-
-                    <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('*') >= 0}" ng-click="filterRole('*')">
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-fw fa-globe themed-color-dark"></i> <strong>All</strong>
-                            </a>
-                        </li>
-                        <li>
-                            <hr style="margin: 10px 0 10px 0;">
-                        </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Founder') >= 0}" ng-click="filterRole('Founder')">
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-flag text-danger"></i> <strong>Founders</strong>
-                            </a>
-                        </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Advisor') >= 0}" ng-click="filterRole('Advisor')">
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-graduation-cap text-info"></i> <strong>Advisors</strong>
-                            </a>
-                        </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Investor') >= 0}" ng-click="filterRole('Investor')">
-                            <a href="javascript:void(0)">
-                                <i class="fa fa-leaf text-success"></i> <strong>Investors</strong>
-                            </a>
-                        </li>
-                    </ul>
+                        <ul class="panel-list">
+                            <li ng-class="{'active':global.context.selectedRole.indexOf('*') >= 0}" ng-click="filterRole('*')">
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-fw fa-globe themed-color-dark"></i> <strong>All</strong>
+                                </a>
+                            </li>
+                            <li>
+                                <hr style="margin: 10px 0 10px 0;">
+                            </li>
+                            <li ng-class="{'active':global.context.selectedRole.indexOf('Founder') >= 0}" ng-click="filterRole('Founder')">
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-flag text-danger"></i> <strong>Founders</strong>
+                                </a>
+                            </li>
+                            <li ng-class="{'active':global.context.selectedRole.indexOf('Advisor') >= 0}" ng-click="filterRole('Advisor')">
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-graduation-cap text-info"></i> <strong>Advisors</strong>
+                                </a>
+                            </li>
+                            <li ng-class="{'active':global.context.selectedRole.indexOf('Investor') >= 0}" ng-click="filterRole('Investor')">
+                                <a href="javascript:void(0)">
+                                    <i class="fa fa-leaf text-success"></i> <strong>Investors</strong>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-            <div class="hpanel">
-                <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Cluster</strong> Filters
-                    <i ng-show="loadingIndustry" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
-                </div>
-                <div class="panel-body filternav">
-                    <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedIndustry.indexOf('*') >= 0}" ng-click="filterIndustry('*');">
-                            <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
-                        </li>
-                        <li>
-                            <hr style="margin: 10px 0 10px 0;">
-                        </li>
-                        <li ng-repeat="industry in global.findKey(global.community.industries, global.context.location, null, [])" ng-class="{'active':global.context.selectedIndustry.indexOf(industry) >= 0}" ng-click="filterIndustry(industry);">
-                            <a><i class="fa {{industry.profile.icon}}"></i> <strong>{{industry.profile.name}}</strong></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="hpanel">
-                <div class="panel-footer top" style="font-size: 17px;">
-                    <strong>Network</strong> Filters
-                    <i ng-show="loadingNetwork" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
-                </div>
-                <div class="panel-body filternav">
-                    <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedNetwork.indexOf('*') >= 0}" ng-click="filterNetwork('*');">
-                            <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
-                        </li>
-                        <li>
-                            <hr style="margin: 10px 0 10px 0;">
-                        </li>
-                        <li ng-repeat="network in global.findKey(global.community.networks, global.context.location, null, [])" ng-class="{'active':global.context.selectedNetwork.indexOf(industry) >= 0}" ng-click="filterNetwork(network);">
-                            <a><i class="fa {{network.profile.icon}}"></i> <strong>{{network.profile.name}}</strong></a>
-                        </li>
-                    </ul>
+            <div class="col-md-4 animated-panel zoomIn">
+                <div class="hpanel">
+                    <div class="panel-footer top" style="font-size: 17px;">
+                        <strong>Cluster</strong> Filters
+                        <i ng-show="loadingIndustry" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    </div>
+                    <div class="panel-body filternav">
+                        <ul class="panel-list">
+                            <li ng-class="{'active':global.context.selectedIndustry.indexOf('*') >= 0}" ng-click="filterIndustry('*');">
+                                <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
+                            </li>
+                            <li>
+                                <hr style="margin: 10px 0 10px 0;">
+                            </li>
+                            <li ng-repeat="industry in global.findKey(global.community.industries, global.context.location, null, [])" ng-class="{'active':global.context.selectedIndustry.indexOf(industry) >= 0}" ng-click="filterIndustry(industry);">
+                                <a><i class="fa {{industry.profile.icon}}"></i> <strong>{{industry.profile.name}}</strong></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+            <div class="col-md-4 animated-panel zoomIn">
+                <div class="hpanel">
+                    <div class="panel-footer top" style="font-size: 17px;">
+                        <strong>Network</strong> Filters
+                        <i ng-show="loadingNetwork" class="fa fa-refresh fa-spin pull-right" style="padding: 4px; color: #aaa;"></i>
+                    </div>
+                    <div class="panel-body filternav">
+                        <ul class="panel-list">
+                            <li ng-class="{'active':global.context.selectedNetwork.indexOf('*') >= 0}" ng-click="filterNetwork('*');">
+                                <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
+                            </li>
+                            <li>
+                                <hr style="margin: 10px 0 10px 0;">
+                            </li>
+                            <li ng-repeat="network in global.findKey(global.community.networks, global.context.location, null, [])" ng-class="{'active':global.context.selectedNetwork.indexOf(industry) >= 0}" ng-click="filterNetwork(network);">
+                                <a><i class="fa {{network.profile.icon}}"></i> <strong>{{network.profile.name}}</strong></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
+            </div>
         </div>
 
-        <div class="col-md-9 col-lg-10">
+        <div class="col-md-12" style="padding-left: 15px; padding-right: 15px;">
 
             <div class="hpanel">
                 <div class="panel-footer top">
