--- a/app/views/people/people.profile.html
+++ b/app/views/people/people.profile.html
@@ -7,7 +7,7 @@
                         <div class="col-sm-2 col-lg-1">
                             <img class="img-circle m-b" style="height:75px;" ng-src="{{$state.params.user.profile.avatar || $state.params.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{::$state.params.user.profile.name}}">
                         </div>
-                        <div class="col-sm-10 col-lg-11">
+                        <div class="col-sm-10 col-lg-11" style="padding-bottom: 15px;">
                             <div class="project-action" style="margin-right: -15px;">
                                 <div class="btn-group pull-right">
                                     <a href="#"><i class="fa fa-twitter btn btn-default btn-xs"></i></a>
