--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -10,7 +10,7 @@
             <div style="margin-top: 15px; margin-left: 0;">
 
                     <div class="header-nav-link">
-                        <a ui-sref="people">
+                        <a ui-sref="people.dashboard">
                             <span>
                                 <div class="col-xs-3 col-sm-1" style="text-align: center;">
                                     <i class="pe-7s-id" style="font-size: 24px; margin-top: 6px;"></i>
@@ -25,7 +25,7 @@
 
 
                     <div class="header-nav-link pushright">
-                        <a ui-sref="startups">
+                        <a ui-sref="startups.dashboard">
                             <span>
                                 <div class="col-xs-3 col-sm-1" style="text-align: center;">
                                     <i class="pe-7s-power" style="font-size: 24px; margin-top: 6px;"></i>
