nav scope in place

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div class="back-cover" ng-controller="LoginCtrl">
+<div class="back-cover" ng-controller="LoginController">
     <div class="bright-line"></div>
 
     <div class="login-container">
