--- a/app/views/people/people.list.html
+++ b/app/views/people/people.list.html
@@ -14,11 +14,8 @@
     </div>
 </td>
 <td style="vertical-align: middle; height: 80px;">
-    <li ng-repeat="(cluster, val) in item.value.profile.cities[global.city.path.key].clusters" style="list-style: none; display: inline; float: right; padding-left: 5px;">
-        <span ng-hide="((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Founder') < 0) && (val.roles.indexOf('Investor') < 0)) && item.value.profile.cities[global.city.path.key].cityAdvisor === true" title="{{cluster}} Cluster" class="btn btn-xs btn-alt btn-default" ng-class="{ 'btn-info' : ((val.roles.indexOf('Advisor') >= 0) && (val.roles.indexOf('Founder') < 0) && (item.value.profile.cities[global.city.path.key].cityAdvisor === false || item.value.profile.cities[global.city.path.key].cityAdvisor === undefined)), 'btn-danger' : (val.roles.indexOf('Founder') >= 0) }" style="cursor: default;"><i class="fa {{global.city.value.profile.clusters[cluster].icon}}"></i></span>
-    </li>
-    <li ng-if="item.value.profile.cities[global.city.path.key].cityAdvisor === true" style="list-style: none; display: inline; float: right; padding-left: 5px;">
-        <span title="General Advisor" class="btn btn-xs btn-alt btn-info" style="cursor: default;">General Advisor</span>
+    <li ng-repeat="global.findKey(item.value.profile.communities, 'roles', null, [])" style="list-style: none; display: inline; float: right; padding-left: 5px;">
+        <a href="{{'/' + item.key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : item.type == 'startup', 'btn-info' : item.type == 'network', 'btn-primary' : item.type == 'industry', 'btn-success' : item.type == 'location'}"><i class="fa {{item.profile.icon}}"></i> {{item.profile.name}}</a>
     </li>
     <div id="skills" ng-show="(showSummary || global.search.count) && item.value.profile.linkedin.summary" style="padding-top:40px">
         <li ng-repeat="skill in item.value.profile.linkedin.skills.values" class="label btn-default" style="margin-right: 3px; margin-top: 3px; float:right; padding-bottom: 5px;">
